darwin-rs/tui/src/status/snapshots/darwin_code_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ Darwin Code (v0.0.0)                                               │
│                                                                              │
│ BYOK mode uses provider-side billing,                                        │
│ rate limits, and quota from the configured API endpoint                      │
│                                                                              │
│  Model:            gpt-5.1-darwin-code-max (reasoning high, summaries detail │
│  Model provider:   OpenAI - https://api.openai.com/v1                        │
│  Directory: [[workspace]]                                                    │
│  Permissions:      Default                                                   │
│  Agents.md:        <none>                                                    │
│                                                                              │
│  Token usage:      1.9K total  (1K input + 900 output)                       │
│  Context window:   100% left (2.25K used / 272K)                             │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)            │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24)            │
╰──────────────────────────────────────────────────────────────────────────────╯
